fix(interaction): interaction data should be separated from interaction